# usa-immigration

./: .env.example  .gitignore  README.md  arxiv_preprint.bbl  arxiv_preprint.tex  blog_post.md  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: require-approval.yml
metadata/: licenses.json  source_registry.json
scripts/: aws_config.py  budget_monitor.py  publish_hf_dataset.py  s3_store.py  setup_aws.py
scripts/benchmark/: deploy_endpoint.py  run_benchmark.py  run_benchmark_v3.py
scripts/crawl/: base_crawler.py  crawl_community.py  crawl_dhs_stats.py  crawl_eoir.py  crawl_open_datasets.py  crawl_secondary.py  crawl_statutes.py  crawl_uscis.py
scripts/finetune/: launch_job.py  launch_job_v3.py  poll_and_export.py  poll_and_export_v3.py  sagemaker_finetune.py
scripts/normalize/: chunker.py  dedup.py  normalize_metadata.py
scripts/parse/: parse_html.py  parse_json.py  parse_pdf.py  run_parse.py
scripts/qa_generation/: generate_qa.py  prompts.py
scripts/validation/: coverage_report.py  validate.py
