[project]
name = "usa-immigration-pipeline"
version = "0.1.0"
description = "Citation-aware dataset pipeline for U.S. immigration law"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "boto3>=1.34",
    "botocore>=1.34",
    "requests>=2.31",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pypdf>=4.2",
    "pdfplumber>=0.11",
    "datasets>=2.19",
    "huggingface-hub>=0.23",
    "tiktoken>=0.7",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "tenacity>=8.3",
    "structlog>=24.1",
    "orjson>=3.10",
    "pydantic>=2.7",
    "python-dateutil>=2.9",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
